@@ -1,5 +1,8 @@
 ---------------------------------------------------------------------------
 Version 3.21.5  [DEVEL] (rgerhards), 2008-09-??
+- added new capability to property replacer: multiple immediately
+  successive field delimiters are treated as a single one.
+  Thanks to Zhuang Yuyao for the patch.
 ---------------------------------------------------------------------------
 Version 3.21.4  [DEVEL] (rgerhards), 2008-09-04
 - removed compile time fixed message size limit (was 2K), limit can now
